update user list with phone number